# storeit-rs

./: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  print.html  quickstart.html  release.toml  searchindex.js  toc.html  toc.js
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  commit-style.yml  coverage-coveralls.yml  coverage-integration.yml  coverage.yml  cross-platform.yml  docs-site.yml  facade-matrix.yml  integration-backends.yml  release.yml  security.yml
docs/: RELEASING.md  api_stability.md  architecture.md  conformance.md  connection_pools.md  migrations.md  plan.md  platform_notes.md  security.md  transactions.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  index.md  quickstart.md
docs/book/src/guides/: README.md  connection_pools.md  migrations.md  platform_notes.md  security.md
docs/book/src/reference/: README.md  api_stability.md  conformance.md
examples/: README.md
examples/migrations/: users_mysql.sql  users_postgres.sql
guides/: connection_pools.html  index.html  migrations.html  platform_notes.html  security.html
reference/: api_stability.html  conformance.html  index.html
storeit/: Cargo.toml  README.md
storeit/examples/: actix_libsql.rs  axum_libsql.rs  libsql_e2e.rs  libsql_tx.rs  mysql_e2e.rs  postgres_e2e.rs  warp_libsql.rs
storeit/examples/actix_libsql/: main.rs
storeit/examples/axum_libsql/: main.rs
storeit/examples/libsql_e2e/: main.rs
storeit/examples/libsql_tx/: main.rs
storeit/examples/mysql_e2e/: main.rs
storeit/examples/postgres_e2e/: main.rs
storeit/examples/warp_libsql/: main.rs
storeit/src/: lib.rs
storeit/tests/: entity_agnostic_tx.rs  facade_integration.rs  facade_reexports.rs  generated_tx_manager.rs
storeit_core/: Cargo.toml  README.md
storeit_core/src/: lib.rs  transactions.rs
storeit_libsql/: Cargo.toml  README.md
storeit_libsql/benches/: ops.rs
storeit_libsql/examples/: basic_libsql.rs
storeit_libsql/src/: lib.rs
storeit_libsql/tests/: integration_libsql.rs
storeit_macros/: Cargo.toml  README.md
storeit_macros/src/: lib.rs
storeit_macros/tests/: trybuild.rs
storeit_macros/tests/ui/: duplicate_id.rs  invalid_column.rs  missing_id.rs
storeit_macros/tests/ui/fail/: entity_duplicate_id.rs  entity_duplicate_id.stderr  entity_invalid_meta.rs  entity_invalid_meta.stderr  entity_missing_id.rs  entity_missing_id.stderr  repository_invalid_finders_syntax.rs  repository_invalid_finders_syntax.stderr  repository_unknown_list.rs  repository_unknown_list.stderr  repository_unknown_nv.rs  repository_unknown_nv.stderr  repository_unsupported_attr_format.rs  repository_unsupported_attr_format.stderr  repository_unsupported_backend.rs  repository_unsupported_backend.stderr  repository_unsupported_finder_type.rs  repository_unsupported_finder_type.stderr
storeit_macros/tests/ui/pass/: entity_basic.rs  entity_custom_table_and_columns.rs  entity_option.rs  repository_basic_libsql.rs  repository_basic_tokio_postgres.rs
storeit_mysql_async/: Cargo.toml  README.md
storeit_mysql_async/src/: lib.rs
storeit_mysql_async/tests/: integration_mysql.rs
storeit_sql_builder/: Cargo.toml  README.md
storeit_sql_builder/src/: lib.rs
storeit_sql_builder/tests/: props.rs
storeit_tokio_postgres/: Cargo.toml  README.md
storeit_tokio_postgres/src/: lib.rs
storeit_tokio_postgres/tests/: integration_postgres.rs
tests_common/: Cargo.toml
tests_common/migrations/libsql/: 001_users.sql
tests_common/migrations/mysql/: 001_users.sql
tests_common/src/: lib.rs
