[package]
name = "storeit_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dahankzter/storeit-rs/"
description = "Core traits, errors, and abstractions for the storeit repository framework"

[dependencies]
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
futures = "0.3"

[features]
unstable = []
