[package]
name = "storeit_mysql_async"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dahankzter/storeit-rs/"
description = "MySQL backend adapter (mysql_async) for the storeit repository framework"

[dependencies]
async-trait = "0.1"
storeit_core = { package = "storeit_core", path = "../storeit_core", version = "0.1" }

storeit_sql_builder = { package = "storeit_sql_builder", path = "../storeit_sql_builder", version = "0.1", features = ["mysql_async"] }
mysql_async = { version = "0.34", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = ">=0.1, <0.2", optional = true }
metrics = { version = "0.21", optional = true }

[dev-dependencies]
# containerized mysql and shared test helpers
testcontainers = "0.16"
testcontainers-modules = { version = "0.4", features = ["mysql"] }
tests_common = { path = "../tests_common" }

[features]
# Enable the actual backend implementation (pulls mysql_async and tokio)
mysql-async = ["dep:mysql_async", "dep:tokio"]
# Opt-in observability features
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]
# Pre-1.0 experimental APIs live behind this no-op feature across the workspace.
unstable = []

default = []
